<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen">
<TextView
    android:id="@+id/banner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Banner"
    android:textSize="26sp"
    android:textStyle="bold"
    android:layout_marginTop="24dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/banner">
    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        />
    <EditText
        android:id="@+id/usernameinput"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="48dp"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:background="@drawable/edittextborder"
        />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout1">
        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username"
            />
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:inputType="textEmailAddress"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/usernameinput"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/edittextborder"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout2">
        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            />
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_weight="0.7"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/edittextborder"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/register" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/line"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountHolder"
        android:textSize="24sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/loginR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"

        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>