<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaloriesLogScreen">
    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Banner"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/banner">
        <TextView
            android:id="@+id/calories"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            />
        <EditText
            android:id="@+id/caloriesInput"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="48dp"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/edittextborder"
            />
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="320dp"
        android:layout_height="283dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layout1" />
    <Button
        android:id="@+id/saveCalories"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveCalories"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/diary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/diary"
            />

        <Button
            android:id="@+id/bodyfat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/Bodyfat"

            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/healthinfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:src="@drawable/heart_solid_full"
            android:background="@color/lightBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:src="@drawable/history"
            android:background="@color/lightBlue"
             />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:src="@drawable/user_solid_full"
            app:layout_constraintTop_toBottomOf="@id/saveCalories" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
