<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileScreen">
    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Banner"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/banner"
        >
        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            />

        <TextView
            android:id="@+id/usernameDB"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        >
        <TextView
            android:id="@+id/emailProfile"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            />
        <TextView
            android:id="@+id/emailDB"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/customizeProfile"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/logout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        android:textSize="24sp"

        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="2.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageButton
            android:id="@+id/diary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/lightBlue"
            android:layout_margin="2dp"
            android:src="@drawable/utensils_solid_full"
            />

        <ImageButton
            android:id="@+id/bodyfat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_margin="2dp"
            android:src="@drawable/weight_scale_solid_full"
            android:background="@color/lightBlue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/healthinfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_margin="2dp"
            android:src="@drawable/heart_solid_full"
            android:background="@color/lightBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_margin="2dp"
            android:src="@drawable/history"
            android:background="@color/lightBlue"
            />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_margin="2dp"
            android:src="@drawable/user_solid_full"
            android:background="@color/lightBlue"
            app:layout_constraintTop_toBottomOf="@id/saveCalories" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>