<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyFatCalculatorScreen">
    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Banner"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/banner"
        >
        <TextView
            android:id="@+id/hip"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/hip"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner"
            />
        <EditText
            android:id="@+id/hipInput"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:inputType="number"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/hip"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/edittextborder"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        >
    <TextView
        android:id="@+id/waist"
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:layout_height="wrap_content"
        android:text="@string/waist"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hip"
        />
    <EditText
        android:id="@+id/waistInput"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:inputType="number"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/waist"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:background="@drawable/edittextborder"
        />

</LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        >
        <TextView
            android:id="@+id/neck"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/neck"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hip"
            />
        <EditText
            android:id="@+id/neckInput"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:inputType="number"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/waist"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/edittextborder"
            />

    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>